Decrease sync interval in the integration test

--- a/integration/nginx.conf
+++ b/integration/nginx.conf
@@ -25,7 +25,7 @@ http {
         metric_connections = prometheus:gauge("connections",
           "Number of HTTP connections", {"state"})
     }
-    init_worker_by_lua_block { prometheus:init_worker() }
+    init_worker_by_lua_block { prometheus:init_worker(0.4) }
     log_by_lua_block {
         metric_requests:inc(1, {ngx.var.server_name, ngx.var.status})
         metric_latency:observe(tonumber(ngx.var.request_time),
