--- a/dist.ini
+++ b/dist.ini
@@ -1,10 +1,10 @@
 name = nginx-lua-prometheus
 abstract = Prometheus metric library for Nginx
-version = 0.20181120
+version = 0.20200420
 author = Anton Tolchanov
 is_original = yes
 license = mit
 lib_dir = .
 doc_dir = .
-exclude_files = prometheus_test.lua
+exclude_files = prometheus_test.lua, integration, prometheus_resty_counter.update.sh
 repo_link = https://github.com/knyar/nginx-lua-prometheus
