lock-less implementation (thanks @knyar for the idea)

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,4 +40,4 @@ script:
   - lua -lluacov prometheus_test.lua
 
 after_success:
-  - luacov-coveralls --include %./prometheus.lua --include %./prometheus_resty_keys.lua --include %./prometheus_lock.lua --include %./prometheus_resty_counter.lua
+  - luacov-coveralls --include %./prometheus.lua --include %./prometheus_resty_keys.lua --include %./prometheus_resty_counter.lua
