--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ before_install:
 
 script:
   - luacheck --globals ngx -- prometheus.lua prometheus_keys.lua prometheus_resty_counter.lua
-  - luacheck --globals luaunit ngx TestPrometheus -- prometheus_test.lua
+  - luacheck --globals luaunit ngx TestPrometheus TestKeyIndex -- prometheus_test.lua
   - lua -lluacov prometheus_test.lua
 
 after_success:
