Avoid listing dictionary keys (#82)
Add a separate library for storing a list of metrics in the same dictionary as metric values. This allows listing all metrics without fully locking the dictionary for a long period of time, which improves tail latency for very large number of metrics.

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,9 +36,9 @@ before_install:
   - luarocks install luaunit
 
 script:
-  - luacheck --globals ngx -- prometheus.lua
-  - luacheck --globals luaunit ngx TestPrometheus -- prometheus_test.lua
+  - luacheck --globals ngx -- prometheus.lua prometheus_keys.lua prometheus_resty_counter.lua
+  - luacheck --globals luaunit ngx TestPrometheus TestKeyIndex -- prometheus_test.lua
   - lua -lluacov prometheus_test.lua
 
 after_success:
-  - luacov-coveralls --include %./prometheus.lua --include %./prometheus_resty_counter.lua
+  - luacov-coveralls --include %./prometheus.lua --include %./prometheus_keys.lua --include %./prometheus_resty_counter.lua
