Make init() accept a table of options; deprecate calling init_worker()

--- a/integration/nginx.conf
+++ b/integration/nginx.conf
@@ -14,8 +14,9 @@ http {
 
     error_log stderr;
 
-    init_by_lua_block {
-        prometheus = require("prometheus").init("prometheus_metrics")
+    init_worker_by_lua_block {
+        prometheus = require("prometheus").init("prometheus_metrics",
+	  {sync_interval=0.4})
         metric_requests = prometheus:counter("requests_total",
           "Number of HTTP requests", {"host", "status"})
         metric_latency = prometheus:histogram("request_duration_seconds",
@@ -25,7 +26,6 @@ http {
         metric_connections = prometheus:gauge("connections",
           "Number of HTTP connections", {"state"})
     }
-    init_worker_by_lua_block { prometheus:init_worker(0.4) }
     log_by_lua_block {
         metric_requests:inc(1, {ngx.var.server_name, ngx.var.status})
         metric_latency:observe(tonumber(ngx.var.request_time),
