--- a/integration/Dockerfile
+++ b/integration/Dockerfile
@@ -1,3 +1,3 @@
-FROM debian:stable-slim
+FROM debian:buster-slim
 RUN apt-get update
 RUN apt-get install --no-install-recommends -y nginx-light libnginx-mod-http-lua
