Fix lua test lint

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,7 @@ jobs:
       - run: luarocks install luaunit
       - run: luarocks install lrexlib-pcre2
       - run: luacheck --globals ngx -- prometheus.lua prometheus_keys.lua prometheus_resty_counter.lua
-      - run: luacheck --globals luaunit ngx TestPrometheus TestKeyIndex -- prometheus_test.lua
+      - run: luacheck --globals luaunit rex_pcre2 ngx TestPrometheus TestKeyIndex -- prometheus_test.lua
       - run: lua -lluacov prometheus_test.lua
       - run: luacov-coveralls --include ^prometheus
         env:
