Run tests on pull requests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,7 @@
 name: Run Tests
 on:
   push:
+  pull_request:
   schedule:
     # Run tests weekly to make sure they keep working despite various
     # dependency changes.
