Add workflow_dispatch action trigger to run tests manually

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,7 @@ on:
     # Run tests weekly to make sure they keep working despite various
     # dependency changes.
     - cron: '23 06 * * 5'
+  workflow_dispatch: # allow running manually
 jobs:
   lua:
     runs-on: ubuntu-latest
