Add main_module to dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -6,5 +6,6 @@ is_original = yes
 license = mit
 lib_dir = .
 doc_dir = .
+main_module = prometheus.lua
 exclude_files = prometheus_test.lua, integration, prometheus_resty_counter.update.sh
 repo_link = https://github.com/knyar/nginx-lua-prometheus
