Increment error metric on resty_counter errors

--- a/dist.ini
+++ b/dist.ini
@@ -7,5 +7,5 @@ license = mit
 lib_dir = .
 doc_dir = .
 main_module = prometheus.lua
-exclude_files = prometheus_test.lua, integration, prometheus_resty_counter.update.sh
+exclude_files = prometheus_test.lua, integration
 repo_link = https://github.com/knyar/nginx-lua-prometheus
