format plain json string

--- a/integration/nginx.conf
+++ b/integration/nginx.conf
@@ -76,11 +76,14 @@ http {
         }
         location /get_lookup_size {
             content_by_lua_block {
-                ngx.print(require("cjson").encode({
-                    metric_counter_dummy = metric_counter_dummy.lookup_size,
-                    metric_gauge_dummy = metric_gauge_dummy.lookup_size,
-                    metric_histogram_dummy = metric_histogram_dummy.lookup_size,
-                }))
+                ngx.print(string.format([[{
+                        "metric_counter_dummy": %d,
+                        "metric_gauge_dummy": %d,
+                        "metric_histogram_dummy": %d
+                    }]],
+                    metric_counter_dummy.lookup_size,
+                    metric_gauge_dummy.lookup_size,
+                    metric_histogram_dummy.lookup_size))
             }
         }
     }
