--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        lua: ["5.1", "5.2"]
+        lua: ["5.2"]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -35,7 +35,7 @@ jobs:
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # Only report test coverage for lua 5.1 to avoid doing it twice.
-        if: ${{ matrix.lua == '5.1' }}
+        if: ${{ matrix.lua == '5.2' }}
   integration:
     runs-on: ubuntu-latest
     timeout-minutes: 10
