Add a metric reset test
This test verifies that:
- a gauge metric that has been reset is no longer reported;
- a previously-reset metric that is used again correctly reports its
  values.

--- a/integration/nginx.conf
+++ b/integration/nginx.conf
@@ -15,7 +15,9 @@ http {
     error_log stderr;
 
     init_worker_by_lua_block {
-        prometheus = require("prometheus").init("prometheus_metrics", {sync_interval=0.4})
+        prometheus = require("prometheus").init("prometheus_metrics", {sync_interval=0.1})
+
+        -- basic_test
         metric_requests = prometheus:counter("requests_total",
           "Number of HTTP requests", {"host", "path", "status"})
         metric_latency = prometheus:histogram("request_duration_seconds",
@@ -23,12 +25,20 @@ http {
           {0.08, 0.089991, 0.1, 0.2, 0.75, 1, 1.5, 3.123232001, 5, 15, 120, 350.5, 1500, 75000, 1500000})
         metric_connections = prometheus:gauge("connections",
           "Number of HTTP connections", {"state"})
+
+        -- reset_test
+        metric_gauge = prometheus:gauge("reset_test_gauge", "Sample gauge for reset test", {"label"})
     }
 
     server {
         listen 18000;
         server_name metrics;
 
+        location /health {
+            content_by_lua_block {
+                ngx.say("ok")
+            }
+        }
         location /metrics {
             content_by_lua_block {
                 metric_connections:set(ngx.var.connections_reading, {"reading"})
@@ -44,9 +54,10 @@ http {
         server_name basic_test;
 
         log_by_lua_block {
-            metric_requests:inc(1, {ngx.var.server_name, ngx.var.request_uri, ngx.var.status})
-            metric_latency:observe(tonumber(ngx.var.request_time),
-                                {ngx.var.request_uri})
+            if ngx.var.request_uri ~= "/health" then
+                metric_requests:inc(1, {ngx.var.server_name, ngx.var.request_uri, ngx.var.status})
+                metric_latency:observe(tonumber(ngx.var.request_time), {ngx.var.request_uri})
+            end
         }
 
         location /fast {
@@ -63,6 +74,34 @@ http {
         }
         location /error {
             return 500;
+        }
+        location /health {
+            content_by_lua_block {
+                ngx.say("ok")
+            }
+        }
+    }
+
+    server {
+        listen 18002;
+        server_name reset_test;
+
+        location /reset_gauge {
+            content_by_lua_block {
+                metric_gauge:reset()
+                ngx.say("ok")
+            }
+        }
+        location /set_gauge {
+            content_by_lua_block {
+                metric_gauge:set(tonumber(ngx.var.arg_metricvalue), {ngx.var.arg_labelvalue})
+                ngx.say("ok")
+            }
+        }
+        location /health {
+            content_by_lua_block {
+                ngx.say("ok")
+            }
         }
     }
 }
